@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2003/07/16 20:23:59 drochner Exp $
+# $NetBSD: Makefile,v 1.5 2003/07/17 09:07:56 abs Exp $
 #
 
 PKGNAME=		gcc3${GCC3_PKGMODIF}-c-${GCC_VERSION}
+PKGREVISION=		1
 COMMENT=		GNU Compiler Collection, C compiler
 
 INFO_FILES=	cpp.info gcc.info gccint.info cppinternals.info
