@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.38 2003/07/13 13:16:04 grant Exp $
+# $NetBSD: Makefile,v 1.39 2003/07/17 09:07:54 abs Exp $
 #
 
 DISTNAME=		gcc-3.3
-PKGREVISION=		4
+PKGREVISION=		5
 PKGNAME=		${DISTNAME:C|gcc|gcc3|}
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_GNU:=gcc/gcc-3.3/}
